Finished about and contact pages

--- a/exercise7/work.html
+++ b/exercise7/work.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/about.css" rel="stylesheet">
+    <link href="css/work.css" rel="stylesheet">
     <link href="css/flexbox.min.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ky Veney</title>
+    <title>Work</title>
   </head>
 
   <body>
@@ -23,17 +23,30 @@
   <li class="nav-item"><a href"#">Contact</a></li>
 </ul>
 
-    <div class="col-xs-12">
-      <div class="box1">
-    <h2>About Me</h2>
-    <p>I'm a senior (5th year) double major in AD/PR and Journalism at the
-      harvard of the plains. I really enjoy building things and solving problems,
-      which is what has naturally led me to web design!</p>
-
+<div class="main">
+  <div class="col-xs-4">
+    <div class="box1">
+      <h2>Work Page</h2>
+      <p>This page will show my work.</p>
     </div>
-    </div>
+  </div>
 
+  <div class="col-xs-4">
+    <div class="box2">
+      <h2>Column 2</h2>
+      <p>This page will show my work.</p>
+    </div>
+  </div>
+
+  <div class="col-xs-4">
+    <div class="box3">
+      <h2>Column 3</h2>
+      <p>This page will show my work.</p>
+    </div>
+  </div>
+
+</div>
   </body>
 
-  <footer>&copy;2017 Ky Veney</footer>
+  <footer id="footer">&copy;2017 Ky Veney</footer>
 </html>
