--- a/exercise7/about.html
+++ b/exercise7/about.html
@@ -5,7 +5,7 @@
     <link href="css/flexbox.min.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ky Veney</title>
+    <title>About</title>
   </head>
 
   <body>
