--- a/exercise7/contact.html
+++ b/exercise7/contact.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/about.css" rel="stylesheet">
+    <link href="css/contact.css" rel="stylesheet">
     <link href="css/flexbox.min.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ky Veney</title>
+    <title>Contact</title>
   </head>
 
   <body>
@@ -23,17 +23,28 @@
   <li class="nav-item"><a href"#">Contact</a></li>
 </ul>
 
-    <div class="col-xs-12">
+  <div class="row">
+    <div class="col-xs-4">
       <div class="box1">
-    <h2>About Me</h2>
-    <p>I'm a senior (5th year) double major in AD/PR and Journalism at the
-      harvard of the plains. I really enjoy building things and solving problems,
-      which is what has naturally led me to web design!</p>
+        <h2>Contact Page</h2>
+          <p>Here is how you can contact me.</p>
+            <ul>
+              <li>Facebook</li>
+              <li>Twitter</li>
+              <li>LinkedIn</li>
+            </ul>
+          </div>
+        </div>
 
+    <div class="col-xs-8">
+      <div class="box2">
+        <h2>Column 2</h2>
+        <p> We can insert forms here, so we made this column wider for more space.</p>
+      </div>
     </div>
-    </div>
+  </div>
 
   </body>
 
-  <footer>&copy;2017 Ky Veney</footer>
+  <footer id="footer">&copy;2017 Ky Veney</footer>
 </html>
